// Copyright (c) 2022 Mica. All rights reserved. All software, including, without limitation, all source
// code and object code, is the intellectual property of Mica, Inc. and is protected by copyright, trademark and
// other intellectual property laws (collective "Mica Software"). You may not use, copy, reproduce, download, store,
// post, broadcast, transmit, modify, sell or make available to the public content from the Mica Software without a
// valid license or the prior written approval of Mica, Inc. Mica, its logos, slogans, taglines,
// products, feature names, and other trademarks are trademarks of Mica, Inc. and may not be used without
// permission.

syntax = "proto3";

package mica.serviceprovider.serviceprovider.v1;

import "google/protobuf/timestamp.proto";
import "micashared/common/v1/bank_account_detail.proto";
import "micashared/common/v1/error.proto";
import "validate/validate.proto";

option go_package = "mica/serviceprovider/serviceproviderv1";
option java_outer_classname = "ServiceProviderProto";
option java_package = "io.mica.serviceprovider.serviceprovider.v1";
option objc_class_prefix = "MICA";

message ServiceProvider {
  string service_provider_key = 1 [(validate.rules).string = {
    min_len: 30,
    max_len: 50
  }];

  int64 version = 2 [(validate.rules).int64.gte = 0];

  google.protobuf.Timestamp created = 3;

  google.protobuf.Timestamp updated = 4;

  string name = 5;

  string service_provider_url = 6;

  micashared.common.v1.BankAccountDetail operating_account = 8;

  micashared.common.v1.BankAccountDetail revenue_account = 9;
}

message GetServiceProviderRequest {}

message GetServiceProviderResponse {
  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_SUCCESS = 1;
    STATUS_ERROR = 2;
    STATUS_NOT_FOUND = 3;
  }
  Status status = 1;

  micashared.common.v1.Error error = 2;

  ServiceProvider service_provider = 3;
}
